Fixes #6 Issue with the result and filter z-index

--- a/demo/jquery.typeahead.css
+++ b/demo/jquery.typeahead.css
@@ -123,6 +123,11 @@ input {
     border-radius: 4px 4px 0 0;
 }
 
+.typeahead-search-container.result,
+.typeahead-search-container.filter {
+    z-index: 999;
+}
+
 .typeahead-search-field {
     width: 100%;
     font-size: 16px;
